fix spacing and project title

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                                         <span class="date">Concept</span>
                                         <span class="meta">Website, Information Architecture</span>
                                     </div>
-                                    <h5><a href="static/pages/esplanade.html">Redesigning the Esplanade Website</a></h5>
+                                    <h5><a href="static/pages/esplanade.html">Esplanade Website Redesign</a></h5>
                                     <div class="btn-grid">
                                         <a class="m-btn-link" href="static/pages/esplanade.html">Read More</a>
                                     </div>
@@ -139,7 +139,7 @@
                                         <span class="date">Released Project</span>
                                         <span class="meta">Product Design, Enterprise System</span>
                                     </div>
-                                    <h5><a href="static/pages/wap.html">Enterprise Email Security Features</a></h5>
+                                    <h5><a href="static/pages/wap.html">Works Applications Enterprise Email Security Features Design</a></h5>
                                     <div class="btn-grid">
                                         <a class="m-btn-link" href="static/pages/wap.html">Read More</a>
                                     </div>
@@ -158,7 +158,7 @@
                                         <span class="date">Intern Project</span>
                                         <span class="meta">UX Design, Prototype</span>
                                     </div>
-                                    <h5><a href="static/pages/autodesk.html">Autodesk WingMan Project</a></h5>
+                                    <h5><a href="static/pages/autodesk.html">Autodesk WingMan Design Project</a></h5>
                                     <div class="btn-grid">
                                         <a class="m-btn-link" href="static/pages/autodesk.html">Read More</a>
                                     </div>
