--- a/static/pages/esplanade.html
+++ b/static/pages/esplanade.html
@@ -32,7 +32,7 @@
         <header class="header-nav">
             <!-- Header Middle -->
             <div class="navbar navbar-default navbar-expand-lg main-navbar">
-                <div class="container light-bg">
+                <div class="container">
                     <a class="navbar-logo" href="/">
                         <img src="../img/logo.svg" alt="Yichang">
                         <span>Yichang Li</span>
@@ -45,9 +45,9 @@
         <!-- Main -->
         <main>
             <section id="esplanade_project_overview">
-                <div class="container">
-                    <div class="m-3rem-b m-6rem-t">
-                        <h1>Redesigning the Esplanade website</h1><br>
+                <div class="container light-bg p-2rem m-6rem-t m-3rem-b">
+                    <div>
+                        <h1>Esplanade Website Redesign</h1><br>
                         <small>Concept · UI/UX Design</small>
                         <div class="row m-1rem-b m-3rem-t">
                             <div class="col-lg-6">
