--- a/static/pages/wap.html
+++ b/static/pages/wap.html
@@ -45,12 +45,12 @@
         <!-- Main -->
         <main>
             <section id="huemail_project_overview">
-                <div class="container white-color dark-bg">
-                    <div class="m-3rem">
-                        <h1>HUE Mail Security Features</h1><br>
+                <div class="container white-color dark-bg p-2rem m-6rem-t m-3rem-b">
+                    <div>
+                        <h1>Works Applications Enterprise Email Security Features Design</h1><br>
                         <small>Product Design</small>
                         <div class="row m-1rem-b m-3rem-t">
-                            <div class="offset-lg-4 col-lg-3">
+                            <div class="col-lg-6">
                                 <h6>Duration</h6>
                                 <div>2 Months</div>
                                 <h6 class="m-1.5rem-t">Role</h6>
@@ -58,9 +58,9 @@
                                 <h6 class="m-1.5rem-t">Tools</h6>
                                 <div>Photoshop, inVision</div>
                             </div>
-                            <div class="col-lg-5">
+                            <div class="col-lg-4">
                                 <h6>Overview</h6>
-                                <div>HUE Mail is an enterprise email system. It has 3 main digital channels: the admin portal, desktop website, and mobile app. In this project, I worked with the product owner of HUE Mail and the sales team to define the problems related to security issues, discover potential solutions, and deliver the interactive designs by following the company design system. 
+                                <div>HUE Mail is an email system of Works Applications enterprise suits. It has 3 main digital channels: the admin portal, desktop website, and mobile app. In this project, I worked with the product owner of HUE Mail and the sales team to define the problems related to security issues, discover potential solutions, and deliver the interactive designs by following the company design system. 
                                 </div>
                             </div>
                         </div>
