--- a/static/pages/zalora.html
+++ b/static/pages/zalora.html
@@ -46,8 +46,8 @@
         <main>
             <!-- Design project 1 (Zalora Style) -->
             <section id="zalora_project_overview">
-                <div class="container">
-                    <div class="m-3rem-b m-6rem-t">
+                <div class="container light-bg p-2rem m-6rem-t m-3rem-b">
+                    <div>
                         <h1>Style -- ZALORA Design System</h1><br>
                         <small>UX Patterns · Web Development</small>
                         <div class="row m-1rem-b m-3rem-t">
