--- a/static/pages/autodesk.html
+++ b/static/pages/autodesk.html
@@ -45,9 +45,9 @@
         <!-- Main -->
         <main>
             <section id="autodesk_project_overview">
-                <div class="container light-bg">
-                    <div class="m-3rem">
-                        <h1>Project WingMan</h1><br>
+                <div class="container light-bg p-2rem m-6rem-t m-3rem-b">
+                    <div>
+                        <h1>Autodesk WingMan Design Project</h1><br>
                         <small>Prototype · UI/UX Design</small>
                         <div class="row m-1rem-b m-3rem-t">
                             <div class="col-lg-6">
