--- a/index.html
+++ b/index.html
@@ -11,6 +11,17 @@
         <meta name="description" content="I'm a UX designer and a full-stack developer interested in interaction design, visual design and emerging technologies. Able to take ideas from concept to wireframe to prototype to production.">
         <!-- title -->
         <title>Yichang's Portfolio</title>
+        <!-- Google Analytics -->
+        <script>
+            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+            })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+            
+            ga('create', 'UA-73369864-2', 'auto');
+            ga('send', 'pageview');
+        </script>
+        <!-- End Google Analytics -->
         <!-- Favicon -->
         <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
         <!-- plugin CSS -->
