--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
 
             gtag('config', 'UA-73369864-2');
         </script>
+        <!-- Google Tag Manager -->
+        <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+            new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+            j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+            'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+            })(window,document,'script','dataLayer','GTM-K2T9HWL');</script>
+        <!-- End Google Tag Manager -->
 
         <!-- End Google Analytics -->
         <!-- Favicon -->
@@ -35,7 +42,10 @@
 
     <!-- Body Start -->
     <body data-spy="scroll" data-target="#navbar-collapse-toggle" data-offset="70">
-        
+        <!-- Google Tag Manager (noscript) -->
+        <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-K2T9HWL"
+            height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+            <!-- End Google Tag Manager (noscript) -->
         <!-- page loading -->
         <div id="loading">
             <div class="load-circle"><span class="one"></span></div>
