--- a/static/pages/esplanade.html
+++ b/static/pages/esplanade.html
@@ -11,6 +11,15 @@
         <meta name="description" content="I'm a UX designer and a full-stack developer interested in interaction design, visual design and emerging technologies. Able to take ideas from concept to wireframe to prototype to production.">
         <!-- title -->
         <title>Yichang's Portfolio</title>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-73369864-2"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', 'UA-73369864-2');
+        </script>
         <!-- Favicon -->
         <link rel="shortcut icon" type="image/x-icon" href="../../favicon.ico">
         <!-- plugin CSS -->
