add id to resume button

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                                 An experienced designer & full stack developer who creates meaningful and delightful solutions through human-centred design.
                             </div>
                             <div class="p-2rem-tb">
-                                <a class="m-btn m-btn-radius m-btn-t-theme" target="_blank" href="/CV_Yichang.pdf">Download CV</a>
+                                <a id="resume" class="m-btn m-btn-radius m-btn-t-theme" target="_blank" href="/CV_Yichang.pdf">Download CV</a>
                             </div>
                             <span class="text-center shake-vertical">
                                 <i class="fas fa-angle-double-down"></i>
