Add about section

--- a/index.html
+++ b/index.html
@@ -84,12 +84,12 @@
                 <div class="container">
                     <div class="row full-screen align-items-center">
                         <div class="col-lg-12 text-center">
-                            <h5>
-                                Hi, I'm Yichang Li
-                            </h5>
-                            <div class="display-1">
-                                An experienced designer & full stack developer who creates meaningful and delightful solutions through human-centred design.
-                            </div>
+                            <h3>
+                                A UX Designer & Cooking Enthusiast
+                            </h3>
+                            <h4 class="medium-dark-color">
+                                Creating meaningful and delightful solutions through human-centred design.
+                            </h4>
                             <div class="p-2rem-tb">
                                 <a id="resume" class="m-btn m-btn-radius m-btn-t-theme" target="_blank" href="/CV_Yichang.pdf">Download CV</a>
                             </div>
@@ -119,7 +119,7 @@
                                 <div class="blog-gird-info">
                                     <div class="b-meta">
                                         <span class="date">Concept</span>
-                                        <span class="meta">Website, Information Architecture</span>
+                                        <span class="meta">UI, Information Architecture</span>
                                     </div>
                                     <h5><a href="static/pages/esplanade.html">Esplanade Website Redesign</a></h5>
                                     <div class="btn-grid">
@@ -178,7 +178,7 @@
                                 <div class="blog-gird-info">
                                     <div class="b-meta">
                                         <span class="date">Intern Project</span>
-                                        <span class="meta">UX Design, Prototype</span>
+                                        <span class="meta">UI, Prototype</span>
                                     </div>
                                     <h5><a href="static/pages/autodesk.html">Autodesk WingMan Design Project</a></h5>
                                     <div class="btn-grid">
@@ -186,6 +186,22 @@
                                     </div>
                                 </div>
                             </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section id="about">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-4">
+                            <img src="static/img/about.JPG"/>
+                        </div>
+                        <div class="offset-lg-2 col-lg-6">
+                            <h4>Hey! <svg class="icon theme-color"><use xlink:href="static/pages/symbol-defs.svg#icon-victory"></use></svg></h4>
+                            <p>I'm Yichang, an experience designer based in Singapore.</p>
+                            <p>I studied computer science and was a full-stack developer before settling into the design field. I discovered my interests in UX when I interned in the AutoCAD UX design team of Autodesk. It was an unforgettable moment when my intern project, <a href="/static/pages/autodesk.html">Project Wingman</a>, was released in 2017. After graduation, I worked in Works Applications, A Japanese ERP company. One of my major projects was to design <a href="static/pages/wap.html">the security features for the enterprise email system</a>. To work in a more professional design team and gain more experience, I started my job in ZALORA as a design technologist. In ZALORA, I accomplished the <a href="static/pages/zalora.html">design system</a> for ZALORA digital channels. I’ve been lucky enough to have the chance to work with amazing people who encouraged me to keep challenging myself, and in 2019, I started to take the full-time UX design course in General Assembly, where I experienced every phase of UX design. And I practice methodologies I never used before, e.g. in <a href="/static/pages/esplanade.html">Esplanade Website Redesign</a>, I learned how to use card sorting and tree testing to revise information architecture. </p>
+                            <p>I get very proud of myself when I see my designs can really solve users' pain and bring some delight to their life.</p>
+                            <p>When I'm not designing, you'll find me either cooking for my family/friends or petting with my cat or someone else dogs/cats/alpaca.</p>
                         </div>
                     </div>
                 </div>
