--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
             </section>
             <section id="about">
                 <div class="container">
-                    <div class="row">
+                    <div class="row align-items-center">
                         <div class="col-lg-4">
                             <img src="static/img/about.JPG"/>
                         </div>
