--- a/index.html
+++ b/index.html
@@ -52,17 +52,27 @@
         </div>
         <!-- end page loading -->
 
-        <header class="header-nav">
-            <!-- Header Middle -->
+        <header class="header-nav header-one-page">
             <div class="navbar navbar-default navbar-expand-lg main-navbar">
                 <div class="container">
                     <a class="navbar-logo" href="/">
                         <img src="static/img/logo.svg" alt="Yichang">
                         <span>Yichang Li</span>
                     </a>
+                    <div class="navbar-collapse justify-content-end collapse" id="navbar-collapse-toggle">
+                        <ul class="nav navbar-nav">
+                            <li><a class="nav-link js-scroll-trigger" href="#projects">Projects</a></li>
+                            <li><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
+                        </ul>
+                    </div>
+                    <div class="extra-menu d-flex align-items-center">
+                        <button type="button" class="navbar-toggler collapsed" data-toggle="collapse" data-target="#navbar-collapse-toggle" aria-expanded="false">
+                            <span class="icon-bar"></span>
+                        </button>
+                    </div>
+                    </div>
                 </div>
             </div>
-            <!-- End Header Middle -->
         </header>
 
         <!-- Main -->
@@ -103,7 +113,7 @@
             </section>
             <!-- End Intro Banner -->
 
-            <section id="case_study">
+            <section id="projects">
                 <div class="container">
                     <div class="section-title text-center m-5rem-b">
                         <h3>Projects</h3>
@@ -192,6 +202,9 @@
             </section>
             <section id="about">
                 <div class="container">
+                    <div class="section-title text-center m-5rem-b">
+                        <h3>About Me</h3>
+                    </div>
                     <div class="row align-items-center">
                         <div class="col-lg-4">
                             <img src="static/img/about.JPG"/>
