fix autodesk typo

--- a/static/pages/autodesk.html
+++ b/static/pages/autodesk.html
@@ -92,7 +92,7 @@
 
                             <img src="../img/autodesk_competitive_analysis.png"/>
         
-                            <h5>User research</h5>
+                            <h5>User Research</h5>
                             <p>
                                 The competitive analysis helped me to identify some of the standard features. However, I decided to discover more about the functionality that allows users to install/update a product to a particular version. Thus I started to find more information on forums for Autodesk users. Seeking for related questions and answers and asking questions directly to the customers helped me to decide install/update a product to a particular version was indeed an essential feature. The customers of Autodesk products need a lot of collaboration in their work. Making sure they use the same version/ compatible versions of tools are crucial. Additionally, from my research, I also identified the key information users were looking for when they install/update Autodesk products.  
                             </p>
