update homepage brand statement style

--- a/index.html
+++ b/index.html
@@ -93,13 +93,13 @@
                 </ul>
                 <div class="container">
                     <div class="row full-screen align-items-center">
-                        <div class="col-lg-12 text-center">
-                            <h3>
+                        <div class="col-lg-12 text-center section-title">
+                            <h2 class="medium-dark-color">
                                 A UX Designer & Cooking Enthusiast
-                            </h3>
-                            <h4 class="medium-dark-color">
+                            </h2>
+                            <p>
                                 Creating meaningful and delightful solutions through human-centred design.
-                            </h4>
+                            </p>
                             <div class="p-2rem-tb">
                                 <a id="resume" class="m-btn m-btn-radius m-btn-t-theme" target="_blank" href="/CV_Yichang.pdf">Download CV</a>
                             </div>
