add nav to case studies

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
                     </a>
                     <div class="navbar-collapse justify-content-end collapse" id="navbar-collapse-toggle">
                         <ul class="nav navbar-nav">
+                            <li><a class="nav-link js-scroll-trigger" href="#home">Home</a></li>
                             <li><a class="nav-link js-scroll-trigger" href="#projects">Projects</a></li>
                             <li><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
                         </ul>
@@ -78,7 +79,7 @@
         <!-- Main -->
         <main>
             <!-- Intro Banner -->
-            <section id="home_brand_statement">
+            <section id="home">
                 <ul class="circles">
                     <li></li>
                     <li></li>
