--- a/static/pages/esplanade.html
+++ b/static/pages/esplanade.html
@@ -38,17 +38,28 @@
         </div>
         <!-- end page loading -->
 
-        <header class="header-nav">
-            <!-- Header Middle -->
+        <header class="header-nav header-one-page">
             <div class="navbar navbar-default navbar-expand-lg main-navbar">
                 <div class="container">
                     <a class="navbar-logo" href="/">
                         <img src="../img/logo.svg" alt="Yichang">
                         <span>Yichang Li</span>
                     </a>
+                    <div class="navbar-collapse justify-content-end collapse" id="navbar-collapse-toggle">
+                        <ul class="nav navbar-nav">
+                            <li><a class="nav-link js-scroll-trigger" href="../../index.html#home">Home</a></li>
+                            <li><a class="nav-link js-scroll-trigger" href="../../index.html#projects">Projects</a></li>
+                            <li><a class="nav-link js-scroll-trigger" href="../../index.html#about">About</a></li>
+                        </ul>
+                    </div>
+                    <div class="extra-menu d-flex align-items-center">
+                        <button type="button" class="navbar-toggler collapsed" data-toggle="collapse" data-target="#navbar-collapse-toggle" aria-expanded="false">
+                            <span class="icon-bar"></span>
+                        </button>
+                    </div>
+                    </div>
                 </div>
             </div>
-            <!-- End Header Middle -->
         </header>
 
         <!-- Main -->
