update wap case study

--- a/static/pages/wap.html
+++ b/static/pages/wap.html
@@ -218,6 +218,45 @@
                     </div>
                 </div>
             </section>
+            <section id="huemail_testing" class="hideme">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-5">
+                            <h3>Testing</h3>
+                        </div>
+                        <div class="offset-lg-1 col-lg-6 m-3rem-t">
+                            <h5> 
+                                <svg class="icon theme-color"><use xlink:href="symbol-defs.svg#icon-cognitive"></use></svg>
+                                Cognitive Walkthrough
+                            </h5>
+                            <p>
+                                Due to the limited resources, I decided to employ a cognitive walkthrough to evaluate my designs before implementation. I hosted a meeting with developers and the product owner to go through the crucial scenarios defined by the business team and me.
+                                
+                            </p>
+                            <p>
+                                Before the evaluation section, I went through the ground rules (e.g. think from the users' perspective, no designing, no debating, etc.) and also the questions (Does the user know what to do next? does the user know where and how to interact with the UI? Is there sufficient feedback to the user? ) they should think and raise if they thought there was an issue.
+                            </p>
+                            <p>
+                                Many useful feedbacks were gathered during the meeting. In particular, the developers helped me to identify some edge cases that I didn't consider while designing. Besides, it also helped the developers to get a better understanding of the feature and accelerated the implementation process.
+                            </p>
+                        </div>
+                        <div class="offset-lg-6 col-lg-6 m-3rem-t">
+                            <h5> 
+                                <svg class="icon theme-color"><use xlink:href="symbol-defs.svg#icon-ut"></use></svg>
+                                Usability Testing
+                            </h5>
+                            <p>Immediately after the implementation, we conducted a usability testing section with our real customers in Japan. The testing included 2 parts. First of all, we asked the participants to perform the key tasks we identified during the design. After that, I also had a short interview with each of the participants to gather more feedback from them and ask some followup questions that I might have during the testing. 
+                            </p>
+                            <p>
+                                The result was quite positive. Only for the tasks for admin users, of the testers hesitated to take action, as they were unfamiliar with some of the terminologies. With some explanations from our operation team in Japan, all the testers were able to complete the tasks we assigned to them. 
+                            </p>
+                            <p>
+                                From the interviews, I also got precious feedback. The testers shared the concern of highlighting the rules violated by the email may allow the mail senders to bypass the rules and cause security issues. And this is definitely a problem we should explore more in the future.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </section>
             <section id="huemail_result" class="hideme">
                 <div class="container">
                     <div class="row">
@@ -226,10 +265,10 @@
                                 <h3>Result</h3>
                             </div>
                             <p class="m-1rem-t">
-                                The HUE Mail Security Feature was released in September 2017.  We conducted usability testing on 5 existing users in Japan remotely. From the usability, the testing result shows that users can complete most of the tasks without guidance. :) 
+                                The Security Feature was released in September 2017.  And to recognize my contribution to the design and implementation, Works Applications reworded me as the star performer.  
                             </p>
                             <p>
-                                However, they shared the concern of highlighting the rules violated by the email may allow the mail senders to bypass the rules and cause security issues. And this is definitely a problem we should explore more in the future.
+                                Moving forward, we started to design the security features for the mobile platform so that our customers can even submit mail requests and approve the requests on their phones.
                             </p>
                         </div>
                     </div>
