--- a/static/pages/wap.html
+++ b/static/pages/wap.html
@@ -287,6 +287,7 @@
                             <a href="https://www.instagram.com/ariel.lee/"><i class="fab fa-instagram"></i></a>
                             <a href="https://www.linkedin.com/in/liyichang/"><i class="fab fa-linkedin-in"></i></a>
                             <a href="https://www.pinterest.com/ariellee812/"><i class="fab fa-pinterest"></i></a>
+                            <a href="https://dribbble.com/ariellee"><i class="fab fa-dribbble"></i></a>
                         </div>
                     </div>
                 </div>
