added entry of openpo to homepage

--- a/index.html
+++ b/index.html
@@ -142,6 +142,27 @@
                         <div class="col-lg-6 m-3rem-t">
                             <div class="blog-grid">
                                 <div class="blog-grid-img">
+                                    <a href="static/pages/openpo.html">
+                                        <img src="static/img/openpo.png" title="OpenPO design show case" alt="OpenPo design show case">
+                                    </a>
+                                </div>
+                                <div class="blog-gird-info">
+                                    <div class="b-meta">
+                                        <span class="date">UX Design</span>
+                                        <span class="meta">User Research, CJM, Mobile Design</span>
+                                    </div>
+                                    <h5><a href="static/pages/zalora.html">OpenPO, Pre-order Manager</a></h5>
+                                    <div class="btn-grid">
+                                        <a class="m-btn-link" href="static/pages/openpo.html">Read More</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-6 m-3rem-t">
+                            <div class="blog-grid">
+                                <div class="blog-grid-img">
                                     <a href="static/pages/zalora.html">
                                         <img src="static/img/zalora.png" title="zalora design system show case" alt="zalora design system show case">
                                     </a>
@@ -158,8 +179,6 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="row">
                         <div class="col-lg-6 m-3rem-t">
                             <div class="blog-grid">
                                 <div class="blog-grid-img">
@@ -179,6 +198,8 @@
                                 </div>
                             </div>
                         </div>
+                    </div>
+                    <div class="row">
                         <div class="col-lg-6 m-3rem-t">
                             <div class="blog-grid">
                                 <div class="blog-grid-img">
