--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     <div class="row full-screen align-items-center">
                         <div class="col-lg-12 text-center section-title">
                             <h2 class="medium-dark-color">
-                                A UX Designer & Cooking Enthusiast
+                                A Technical UX Designer
                             </h2>
                             <p>
                                 Creating meaningful and delightful solutions through human-centred design.
