update about me and cv

--- a/index.html
+++ b/index.html
@@ -234,9 +234,9 @@
                         <div class="offset-lg-2 col-lg-6">
                             <h4>Hey! <svg class="icon theme-color"><use xlink:href="static/pages/symbol-defs.svg#icon-victory"></use></svg></h4>
                             <p>I'm Yichang, an experience designer based in Singapore.</p>
-                            <p>I studied computer science before settling into the design field. I discovered my interests when I studied Human-Computer Interaction in school.  When I interned in the AutoCAD UX design team of Autodesk, I realized how proud it could be to design something that improved the users' life. After graduation, apart from being a software engineer, I also worked on some UX design projects to practice my design skills. I've been lucky enough to have the chance to work with amazing people who encouraged me to keep challenging myself. In 2019, I took the full-time UX design course in the General Assembly, and to be a fulltime UX designer. </p>
-                            <p>I get very proud of myself when I see my designs can solve users' pain and bring some delight to their life.</p>
-                            <p>When I'm not designing, you'll find me either cooking for my family/friends or petting with my cat or someone else dogs/cats/alpaca.</p>
+                            <p>
+                                I can code. I'm decent at systems and interaction design. I am curious about new technologies and can pick up quickly. I've had experience conducting workshops and sharing sessions. I am known as "easy to work with". I love eating and cooking, and animals. 
+                            </p>
                         </div>
                     </div>
                 </div>
