update copy in zalora showcase

--- a/static/projects/zalora.html
+++ b/static/projects/zalora.html
@@ -73,7 +73,7 @@
                                 <h6>Duration</h6>
                                 <div> 6 Months</div>
                                 <h6 class="m-1.5rem-t">Role</h6>
-                                <div>Design Technologist</div>
+                                <div>UX Engineer</div>
                                 <h6 class="m-1.5rem-t">Tools</h6>
                                 <div>ReactJs, HTML, CSS, SVG</div>
                             </div>
@@ -96,7 +96,7 @@
                     <div class="row m-6rem-t">
                         <div class="col">
                             <h3>My Role</h3>
-                            <p>As a frontend developer on the team, I bring a frontend focus with HTML & CSS knowledge, seasoned skills to establish conventions and tool building. My responsibilities range from reviewing and auditing the as-is design and implementation, providing aid with frontend focus to ensure the design is scalable and reusable, contributing to the design system documentation.</p>
+                            <p>As a UX engineer, I brought a focus with HTML & CSS knowledge, seasoned skills to establish conventions and tool building. My responsibilities ranged from reviewing and auditing the as-is design and implementation, providing aid with frontend focus to ensure the design is scalable and reusable, contributing to the design system documentation.</p>
                         </div>
                     </div>
                 </div>
